--- a/pkg/openapi/config.yaml
+++ b/pkg/openapi/config.yaml
@@ -1,3 +1,5 @@
 package: generated
 import-mapping:
   https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml: github.com/unikorn-cloud/core/pkg/openapi
+compatibility:
+  old-merge-schemas: true
