Give administrators and users image upload perms
This permission (or lack of) effectively acts as a feature flag.

Ref INST-376.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -241,6 +241,7 @@ roles:
         region:networks:v2: [create,read,update,delete]
         region:filestorage:v2: [create,read,update,delete]
         region:filestorageclass:v2: [read]
+        region:images: [create,delete]
         region:securitygroups:v2: [create,read,update,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
@@ -288,6 +289,7 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:filestorageclass:v2: [read]
+        region:images: [create,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
