Add image create permission to compute-service role
This lets the compute service ask for a server to be snapshotted,
which needs the region:image/create permission.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -217,7 +217,7 @@ roles:
         region:identities: [create,read,delete] # TODO: V2 delete me, created by network
         region:regions: [read]
         region:flavors: [read]
-        region:images: [read]
+        region:images: [read,create]
         region:networks: [create,read,delete] # TODO: Create/delete V1 only
         region:networks:v2: [read]
         region:servers: [create,read,update,delete]
