Add WWW-Authenticate Support
As mandated by oauth 2.1 we should include the WWW-Authenticate header
should be returned by protected endpoints when authentication fails.
Further to that RFC9728 specifies a protected resource metadata endpoint
that can be used to discover compatible authorization services.  All in
all this enables all our services to be used with MCP.

--- a/pkg/openapi/server.spec.yaml
+++ b/pkg/openapi/server.spec.yaml
@@ -25,6 +25,17 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/openidConfigurationResponse'
+  /.well-known/openid-protected-resource:
+    description: |-
+      Implements OIDC authorization service discovery.
+    get:
+      x-no-security-requirements: true
+      x-hidden: true
+      description: |-
+        Reads the OIDC discovery page identifying authorization severs.
+      responses:
+        '200':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/openidProtectedResourceResponse'
   /oauth2/v2/authorization:
     description: |-
       Implements OAuth 2.0 authorization grants.
