Give user role region:images/read permission
Hitherto, it's been internal services that need this permission, so
they can query the images for a region to determine which are
available to use for e.g., creating a compute instance. Allowing
access to the public was not necessary, and possibly a source of
confusion, since each other service using images has its own, more
specialised endpoint.

The new endpoint for listing images is intended for public
consumption, and is guarded by this permission. Since we now allow
`create` (for image import) and `delete` (for getting rid of images),
it's less of a step to allow `read`.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -289,7 +289,7 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:filestorageclass:v2: [read]
-        region:images: [create,delete]
+        region:images: [read,create,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
