Give administrators region:images/read
Roles do not composite, so it's possible -- usual even -- for a person
to be an administrator but _not_ a user. If the administrator
permissions are meant to be a superset of user permissions, they need
to include region:images/read too.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -241,7 +241,7 @@ roles:
         region:networks:v2: [create,read,update,delete]
         region:filestorage:v2: [create,read,update,delete]
         region:filestorageclass:v2: [read]
-        region:images: [create,delete]
+        region:images: [read,create,delete]
         region:securitygroups:v2: [create,read,update,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
