Give reader and auditor region:images/read
These ones too, @spjmurray says.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -269,6 +269,7 @@ roles:
         region:networks:v2: [read]
         region:filestorage:v2: [read]
         region:filestorageclass:v2: [read]
+        region:images: [read]
         region:securitygroups:v2: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
@@ -316,6 +317,7 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:filestorageclass:v2: [read]
+        region:images: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
