--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -241,7 +241,7 @@ roles:
         region:networks:v2: [create,read,update,delete]
         region:filestorage:v2: [create,read,update,delete]
         region:filestorageclass:v2: [read]
-        region:images: [create,delete]
+        region:images: [read,create,delete]
         region:securitygroups:v2: [create,read,update,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
@@ -269,6 +269,7 @@ roles:
         region:networks:v2: [read]
         region:filestorage:v2: [read]
         region:filestorageclass:v2: [read]
+        region:images: [read]
         region:securitygroups:v2: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
@@ -289,7 +290,7 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:filestorageclass:v2: [read]
-        region:images: [create,delete]
+        region:images: [read,create,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
@@ -316,6 +317,7 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:filestorageclass:v2: [read]
+        region:images: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
