Add Pact CI/CD pipeline for contract verification and deployment (INST-585)
   - Add pact-verification workflow for webhook-triggered provider verification
   - Add can-i-deploy check to pull-request workflow
   - Add record-deployment job to merge workflow
   - Add Makefile targets: can-i-deploy, record-deployment, test-contracts-provider-webhook

--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -29,3 +29,14 @@ jobs:
       uses: codecov/codecov-action@v5
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  ContractDeployment:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Record Deployment
+      run: make record-deployment
+      env:
+        PACT_BROKER_URL: ${{ vars.PACT_BROKER_URL_DEV }}
+        PACT_BROKER_USERNAME: ${{ vars.PACT_BROKER_USERNAME }}
+        PACT_BROKER_PASSWORD: ${{ secrets.PACT_BROKER_PASSWORD }}
