--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -103,3 +103,10 @@ jobs:
         PROVIDER_VERSION: ${{ github.sha }}
         GIT_BRANCH: ${{ github.head_ref || github.ref_name }}
       run: make test-contracts-provider-ci
+    - name: Check if I can deploy
+      run: make can-i-deploy
+      env:
+        PACT_BROKER_URL: ${{ vars.PACT_BROKER_URL_DEV }}
+        PACT_BROKER_USERNAME: ${{ vars.PACT_BROKER_USERNAME }}
+        PACT_BROKER_PASSWORD: ${{ secrets.PACT_BROKER_PASSWORD }}
+        PROVIDER_VERSION: ${{ github.sha }}
